# state-moseq

./: .gitignore  LICENSE  README.md  example.ipynb  setup.cfg  setup.py
docs/source/: conf.py  efficient_hhmm_tutorial.ipynb  example_data_tutorial.ipynb  hhmm_efficient.rst  hhmm_standard.rst  index.rst  install.rst  standard_hhmm_tutorial.ipynb  utils.rst
higher-order-behaviors/: __init__.py  hhmm.py  util.py
higher_order_behaviors/: __init__.py  hhmm.py  hhmm_efficient.py  hhmm_standard.py  util.py
notebooks/: efficient_hhmm_tutorial.ipynb  simple_hhmm_tutorial.ipynb  standard_hhmm_tutorial.ipynb
state_moseq/: __init__.py  util.py  viz.py
