[metadata]
name = higher-order-behaviors
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/calebweinreb/higher-order-behaviors
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numba
    dynamax>=0.1.4
    chex
    jaxtyping
    tensorflow_probability
    tqdm

[options.package_data]
* = *.md